--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -106,42 +106,49 @@ vollzogen werde.
 |
 [verse]
 ____
-Order
+[11/1i]
 
-Bückeburg, Amt Office
-10 July 1841
+Done at Bückeburg, at the Amt
+on the 10th of July 1841
 
-In the matter of
 
-Hempel Sons of Minden, Plaintiffs,
+        In the matter of
+
+the Hempel Sons in Minden, plaintiffs,
           versus
-Colon Krückeberg, No. 10 in Berenbusch, Defendant, Remaining principal
-and interest.
+the Colon [farmer] Krückeberg No. 10 in
+Berenbusch, defendant,
+         [Total] capital and
+         interest.
 
-Advocate Meyer, attorney for the plaintiffs, respectfully requests that,
-since the defendant Krückeberg has still not, as ordered by decree of May
-29^th^ and June 6^th^ of this year, paid the sum of 133 Reichsthaler
-7 Mariengroschen together with 5 percent interest from April 9, 1833,
-the threatened execution be carried out, under threat of *distraint*.
+Advocate Meyer, attorney for the plaintiffs, most respectfully
+requested that, since the defendant Krückeberg has still not—
+as was ordered to him by decree of the 29th of May and 6th of
+June of last year—paid the sum of 133 Reichsthaler 7 Groschen
+together with 5 percent annual interest from the 9th of April
+1833, the threatened **enforcement of judgment**, with warning
+of distraint [seizure of property], now be decreed.
 
 Entered and issued as a default judgment, in witness thereof.
        F. Sander
 
+      Decree
 
-Decree
+The foregoing petition is to be communicated to the defendant
+in copy, and the enforcement of judgment is now ordered. The
+court officer Möller is instructed to enforce against the defendant
+for the principal sum of 133 Reichsthaler 7 Mariengroschen and
+for the accrued interest from 9 April 1833 at 5 percent, together
+with a fee of 4 Mariengroschen. He is further to make clear to
+him that, if this enforcement proves fruitless and no payment
+is made within 14 days, then upon further request of the plaintiffs
+seizure of property (distraint) will immediately be ordered and
+carried out.
 
-The above decision is to be communicated to the defendant in
-copy, and execution is now ordered. The court officer Möller is
-directed to execute against the defendant for the principal sum
-of 133 Reichsthaler [Rthlr struck through] 7 Mariengroschen and
-interest from 9 April 1833 at 5 percent, with a fee of 4
-Mariengroschen, and to inform him that if the execution proves
-unsuccessful and if no payment is made within 14 days, then upon
-further request by the plaintiffs, distraint  will be ordered and
-carried out immediately.
+Decreed at Bückeburg, the 13th of July 1841.
+Princely Schaumburg District Office.
 
-Decree: Bückeburg, 13 July 1841
-Fürstlich Schaumburg-Lippe Amt
+     Hauck      Höcker
 
 Hauck  Höcker
 ____
