--- a/x.adoc
+++ b/x.adoc
@@ -1,20 +1,22 @@
-.Translation
-____
-*Stamp:* 3 groschen — *re:* Chamber file no. 274.
+Done at Bückeburg, at the Amt
+on the 10th of July 1841
 
-*Office Draft to the Amt Bückeburg*
+        In the matter of
 
-*Re:* Loan for Colon Krückeberg, No. 10 in Berenbusch
+the Hempel Sons in Minden, plaintiffs,
+          versus
+the Colon [farmer] Krückeberg No. 10 in
+Berenbusch, defendant,
+         [Total] capital and
+         interest.
 
-With reference to the rescript of *24 December of last year*, the *office is instructed* to *collect*,
-against receipt, the *200 Reichstaler (courant)* loaned to the said *Krückeberg* from the chamber treasury and
-to *apply* them to the *purpose specified in the above rescript*†.
-*Bückeburg, 20 January 1842*
-*By order of the Prince.* *(initials: Lm, L)*
+Advocate Meyer, attorney for the plaintiffs, most respectfully
+requested that, since the defendant Krückeberg has still not—
+as was ordered to him by decree of the 29th of May and 6th of
+June of last year—paid the sum of 133 Reichsthaler 7 Groschen
+together with 5 percent annual interest from the 9th of April
+1833, the threatened **enforcement of judgment**, with warning
+of distraint [seizure of property], now be decreed.
 
-*[margin: R.; Wh.; Dispatched: Strauk, 22 Jan.]*
-
-† *The enclosed bond is returned herewith*, so that, *after payment of the 200 thalers has been made*, the
-requisite particulars may be *noted beneath it*, the *entry in the mortgage register* arranged, and *in the
-bond* the *necessary note with reference to the order* added; *then send the same to the chamber*.
-____
+Entered and issued as a default judgment, in witness thereof.
+       F. Sander
