--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -22,6 +22,35 @@ petition closes with the standard deferential formula. Marginal dockets route th
 report* (noted *4 Oct 1841*) and show it was *drafted by G. W. Fuchs (Conc.)* and registered under *N. C. 438
 i*.
 
+== Timline
+
+= Timeline: Hempel Söhne v. Krückeberg (1841)
+
+= Timeline: Hempel Söhne v. Krückeberg (1841)
+
+[horizontal]
+29 May 1841 & 6 June 1841::  
+Decrees issued by the Amt ordering Johann Heinrich Krückeberg (Colon No. 10, Berenbusch) to pay  
+*133 Reichsthaler 7 Mariengroschen plus 5% annual interest from 9 April 1833.*  
+Krückeberg does not comply.
+
+10 July 1841::  
+Advocate Meyer, attorney for the plaintiffs (Hempel Söhne of Minden), files a petition before the Amt.  
+He requests that the threatened *enforcement of judgment (Execution)* be decreed,  
+with the warning of *seizure of property (Auspfandung).*  
+Clerk’s note: *entered, issued, as a default judgment (ref: exp: contum: infidem).*  
+Signed: F. Sander.  
+Krückeberg is not present and does not know of this filing.
+
+13 July 1841::  
+The Amt issues its *decree (Decretum):*  
+* The petition is to be communicated to Krückeberg in copy.  
+* *Enforcement of judgment (Execution)* is ordered.  
+* Court officer (Amtsdiener) Möller is instructed to enforce collection of the debt (principal + interest + 4 Mariengroschen fee).  
+* Möller is to warn Krückeberg that, if enforcement proves fruitless and no payment is made within 14 days,  
+then upon further request of the plaintiffs, *seizure of property (Auspfandung)* will immediately be decreed and carried out.  
+Signed by Amt officials Hauck and Höcker.
+
 == Transliteration and Translation
 
 [cols="1a,1a"]
