--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -134,23 +134,20 @@ Entered and issued as a default judgment, in witness thereof.
 
       Decree
 
-The foregoing petition is to be communicated to the defendant
-in copy, and the enforcement of judgment is now ordered. The
-court officer Möller is instructed to enforce against the defendant
-for the principal sum of 133 Reichsthaler 7 Mariengroschen and
-for the accrued interest from 9 April 1833 at 5 percent, together
-with a fee of 4 Mariengroschen. He is further to make clear to
-him that, if this enforcement proves fruitless and no payment
-is made within 14 days, then upon further request of the plaintiffs
-seizure of property (distraint) will immediately be ordered and
-carried out.
+The foregoing petition is to be communicated to the defendant in
+copy, and the enforcement of judgment is now ordered. The court
+officer Möller is ordered to collect from the defendant the
+principal of 133 Reichsthaler 7 Mariengroschen, interest at 5
+percent from 9 April 1833, and a fee of 4 Mariengroschen.  He is
+further to make clear to him that, if this enforcement proves
+fruitless and no payment is made within 14 days, then upon
+further request of the plaintiffs seizure of property (distraint)
+will immediately be ordered and carried out.
 
 Decreed at Bückeburg, the 13th of July 1841.
 Princely Schaumburg District Office.
 
      Hauck      Höcker
-
-Hauck  Höcker
 ____
 |===
 
