--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -22,7 +22,7 @@ petition closes with the standard deferential formula. Marginal dockets route th
 report* (noted *4 Oct 1841*) and show it was *drafted by G. W. Fuchs (Conc.)* and registered under *N. C. 438
 i*.
 
-== Timeline: Hempel Söhne v. Krückeberg (1841)
+=== Timeline: Hempel Söhne v. Krückeberg (1841)
 
 29 May 1841 & 6 June 1841::  
 Decrees issued by the Amt ordering Johann Heinrich Krückeberg (Colon No. 10, Berenbusch) to pay  
