--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -62,10 +62,10 @@ Nr. pr.: 1274  [Registry (protocol) number of the Rentkammer;
                 Gnädigst regierender Fürst
                 und Herr!             
 
-Bl.
+RC.
 b.m. zum Amtsbericht
 B. 4 Oct 41
-[Samg/Spreng]
+          [Samg or Spreng]
 
 Mein verstorbener Vater und nach dessen Tode auch meine Mutter,
 die das Handwerk meines Vaters, eines Schuhmachers, fortsetzte,
@@ -113,10 +113,9 @@ Most Serene Prince, gracious reigning Prince and Lord,
 [Referred to] the office report
 B[ückeburg], 4 Oct 1841
 
-[instruction/minute by the responsible official]
-(On this leaf:) keep with me for the Amtsbericht.
+Internal note: keep with me for the office report.
 Bückeburg, 4 Oct 1841.
-[Samg/Spreng]
+          [Samg or Spreng]
 
 My late father—and, after his death, my mother, who continued my
 father’s trade as a shoemaker— incurred a substantial leather
