--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -65,7 +65,7 @@ Nr. pr.: 1274  [Registry (protocol) number of the Rentkammer;
 RC.
 b.m. zum Amtsbericht
 B. 4 Oct 41
-          [Samg or Spreng]
+          [Spreng]
 
 Mein verstorbener Vater und nach dessen Tode auch meine Mutter,
 die das Handwerk meines Vaters, eines Schuhmachers, fortsetzte,
@@ -115,7 +115,7 @@ B[ückeburg], 4 Oct 1841
 
 Internal note: keep with me for the office report.
 Bückeburg, 4 Oct 1841.
-          [Samg or Spreng]
+          [Spreng]
 
 My late father—and, after his death, my mother, who continued my
 father’s trade as a shoemaker— incurred a substantial leather
