--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -108,14 +108,12 @@ Cammeral file no. 483i
 
 presented in incoming [matters] 2 Oct 1841
 
+???? Nr pr...????
+
 Most Serene Prince, gracious reigning Prince and Lord,
 
-[Referred to] the office report
-B[ückeburg], 4 Oct 1841
+Clerk’s note (Spreng), Bückeburg, 4 Oct 1841: keep with me; attach/pair with the Amt’s report.
 
-Internal note: keep with me for the office report.
-Bückeburg, 4 Oct 1841.
-          [Spreng]
 
 My late father—and, after his death, my mother, who continued my
 father’s trade as a shoemaker— incurred a substantial leather
