--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -108,7 +108,7 @@ Cammeral file no. 483i
 
 presented in incoming [matters] 2 Oct 1841
 
-Registry no. 1274 (chancery office log number). [Bottom of p. 1.]
+Registry no. 1274 [office log number; appears at the bottom of p. 1].
 
 Most Serene Prince, gracious reigning Prince and Lord,
 
