--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -1,4 +1,4 @@
-= Document 6: Report by Senior Councillor Reck, Sovereign Decree, Opion of Coouncillor Reck and Decress of His Serene Highness
+= Document 6: Report by Senior Councillor Reck, Sovereign Decree, Opinion of Councillor Reck and Decress of His Serene Highness
 :page-role: wide
 
 [[doc-index-6-1]]
