--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -1,4 +1,4 @@
-= Document 2: Report of the Amt Bückeburg on Colon Krückeberg’s Debt and Loan Request (7 Oct 1841; entered 11 Oct 1841)
+= 2: Report of the Amt Bückeburg on Colon Krückeberg’s Debt and Loan Request (7 Oct 1841; entered 11 Oct 1841)
 :page-role: wide
 
 [role="section-narrow"]
