--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -1,4 +1,4 @@
-= Document 3: Petition of Colon Krückeberg, with Valuation and Resolution
+= 3: Petition of Colon Krückeberg, with Valuation and Resolution
 :page-role: wide
 
 [[doc-index-3-1]]
