--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -1,4 +1,4 @@
-= Document 8: Report from the Amt Bückeburg (12 Jan 1842), Reply (20 Jan 1843), Likewise to Treasurer Berger (20 Jan 1842)
+= 8: Report from the Amt Bückeburg (12 Jan 1842), Reply (20 Jan 1843), Likewise to Treasurer Berger (20 Jan 1842)
 :page-role: wide
 
 [[doc-index-8-1]]
