--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -1,5 +1,5 @@
 [[doc-index-4-1]]
-= Document 4: Krückeberg’s Second Petition and the Rentkammer’s Decision (21–25 Nov 1841)
+= 4: Krückeberg’s Second Petition and the Rentkammer’s Decision (21–25 Nov 1841)
 :page-role: wide
 
 [options="noheader",cols="1a,1a",frame=none,grid=none]
