--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -281,7 +281,7 @@ ____
 === Prince of Schaumburg-Lippe Georg Wilhelm's Decision and Signature.
 
 On the last page, written vertically in the left margin--rotated below so one can read it--is the decision of
-he Sovereign ruler of Schaumburg-Lippe.
+the Sovereign ruler of Schaumburg-Lippe, Georg Wilhelm, Prince of Schaumburg-Lippe.
 
 [cols="2a,1a",frame=none,grid=none,options="noheader"]
 |===
