--- a/x.adoc
+++ b/x.adoc
@@ -1,22 +1,25 @@
-Done at Bückeburg, at the Amt
-on the 10th of July 1841
+[verse]
+---
 
-        In the matter of
+NC. 2422.
+Abschrift. Anweisung der Kammer
+für den Kammerrentmeister Berger
+d.d. Bückeb. d. 21. April 1845
 
-the Hempel Sons in Minden, plaintiffs,
-          versus
-the Colon [farmer] Krückeberg No. 10 in
-Berenbusch, defendant,
-         [Total] capital and
-         interest.
+Fürstl. Rentkammer hat lt. Kaufbrief vom
+17. April a.c. von dem Colon Krückeberg
+Nr. 10 in Berenbusch ein in der s. g. Söhre belegenes,
+9 Morgen 19 R haltendes Grundstück
+für die Summe von 858 Rthlr 10 Ggr 2 Pf Cour.
+angekauft.
 
-Advocate Meyer, attorney for the plaintiffs, most respectfully
-requested that, since the defendant Krückeberg has still not—
-as was ordered to him by decree of the 29th of May and 6th of
-June of last year—paid the sum of 133 Reichsthaler 7 Groschen
-together with 5 percent annual interest from the 9th of April
-1833, the threatened **enforcement of judgment**, with warning
-of distraint [seizure of property], now be decreed.
+K. Rmstr. Berger wird angewiesen,
+obige Kaufgelder, wovon jedoch ein
+dem Colon Krückeberg lt. Oblig. vom
+12. Janr 1842 aus Kammerkasse gleistetes
+Darlehn von 200 Rthlr Cour. nebst
+Zinsen zurückzubehalten ist, dem Ver-
+käufer gegen Quittung auszuzahlen,
+in
+---
 
-Entered and issued as a default judgment, in witness thereof.
-       F. Sander
