--- a/modules/689/pages/doc-09.adoc
+++ b/modules/689/pages/doc-09.adoc
@@ -101,6 +101,29 @@ ____
 
 === Transliteration and Translation
 
+There are numerous abbrevations used in *NC 2422* below. This table summarizes
+them.
+
+[cols="2,3,4",options="header"]
+|===
+|Abbrev. | German | English Meaning
+
+|lt. | laut | per / according to
+|a.c. | anno currente | of the current year (this year)
+|d.d. | de dato | bearing the date (dated)
+|Fürstl. | Fürstliche(r) | princely / of the Prince’s
+|K. Rmstr. | Kammer-Rentmeister | chamber paymaster/treasurer
+|Oblig. | Obligation | bond / promissory note
+|Rthlr | Reichsthaler | rixdollar
+|Ggr | Gute Groschen | good groschen
+|Pf | Pfennige | pence
+|Cour. | Courant | current coin/face-value currency
+|R | Ruthen | square rods (area unit)
+|s. g. | so genannt(e) | so-called
+|Bückeb. | Bückeburg | place name
+|No./Nr. | Num
+
+
 [cols="1a,1a",frame=none,grid=none]
 |===
 |Transliteration|Translation
@@ -108,23 +131,23 @@ ____
 |
 [literal,subs="verbatim,quotes"]
 ....
-No. 2422.
+NC. 2422.
 Abschrift Anweisung der Kammer
 für den Kammerrentmeister Berger
 d. d. Bückeb. d. 21. April 1845
 
-Fürstl. Rentkammer hat [e]t Kaufbrief vom
+Fürstl. Rentkammer hat lt[laut] Kaufbrief vom
 17. April a.c. von dem Colon Krückeberg
-No. 10 in Berenbusch ein in der s.g.
-Söhre belegenes, 9 Morgen 19 K helfindes
-Grundstück für die Summe von 858 rt 10 
-2d Cour. angekunft.
+Nr. 10 in Berenbusch ein in der s. g. Söhre belegenes,
+9 Morgen 19 R haltendes Grundstück
+für die Summe von 858 Rthlr 10 Ggr 2 Pf Cour.
+angekauft.
 
-K Rmstr Borger wird angewiesen,
+K. Rmstr. Berger wird angewiesen,
 obige Kaufgelder, wovon jedoch ein
 dem Colon Krückeberg lt. Oblig. vom
-12 Janr 1842 aus Nummerkasse gelie-
-stetes Darlehn von 200 rt wur nebst
+12. Janr 1842 aus Kammerkasse geleistetes
+Darlehn von 200 Rthlr Cour. nebst
 Zinsen zurückzubehalten ist, dem Ver-
 käufer gegen Quittung auszuzahlen,
 in Kammerrechnung gehörigen
