--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -7,7 +7,7 @@
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
 |image::21-r.png[link=self]
-|image::22-l.png[link=self]
+|image::22.png[link=self]
 |===
 
 === Transliteration and Translation
