--- a/modules/689/pages/doc-07.adoc
+++ b/modules/689/pages/doc-07.adoc
@@ -32,13 +32,12 @@ Sicherheit des Darlehns, das Nöthige aufzunehmen ist,
 einzusenden, welchem nächst die Auswahlung der 200 r. aus Amt,
 und solches Geld gehörig zu verwenden, verfügt werden soll.
 Suppl: ist hiervon in Kenntniß zu setzen.
-Bburg 24. Dibr 1841.
+Bburg 24. Debr 1841.
 Fürstl: p.
 
 
 Lm   L
 ....
-
 |
 [verse]
 ____
