--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -69,15 +69,17 @@ Report from the Office of Bückeburg
 *Amt register no. 1662 (series: Protocol/outgoing register) — re: Chamber file no. 5702*
 *Re: Loan for Colon Krückeberg, No. 10 in Berenbusch*
 
-*In accordance with the most gracious rescript of 24/30 December
-of last year, we hereby enclose the loan bond* drawn up for Colon
-Krückeberg, No. 10 in Berenbusch.
+In accordance with the most gracious order of 24/30 December of
+last year, we most humbly submit the promissory note drawn up for
+the loan to Colon Krückeberg, No. 10 in Berenbusch.
 *Bückeburg, 12 January 1842*
 Hauck D^r^ Neuhsel Höcker *(district officer)*
 
 *R.C. (Rentkammer decision).* 
-Confirm the loan bond, then issue a payment order to Councillor
-K. R. Berger—-not to Krückeberg, to the Amt.
+The promissory note is to be confirmed, and then Chamber
+treasurer (Kammerrentmeister) Berger is to be furnished with a
+payment order—however, not to Krückeberg but to the Amt (district
+office)
 Bückeburg, 20 Jan. 1842.
 *Reck, acting on behalf of the Rentkammer.*
 ____
@@ -148,8 +150,8 @@ the above rescript*†.
 [margin, small hand] v. d. d. 12. Jan. 1842 — file note repeating the
 date of the attached report.
 
-† *The enclosed bond is returned herewith*, so that, *after
-payment of the 200 thalers has been made*, the requisite
+† *The enclosed promissory note is returned herewith*, so that,
+*after payment of the 200 thalers has been made*, the requisite
 particulars may be *noted beneath it*, the *entry in the mortgage
 register* arranged, and *in the bond* the *necessary note with
 reference to the order* added; *then send the same to the
@@ -190,14 +192,14 @@ Das Capital ist am 25. Jan. 1842 ausgezahlt
 ____
 Office Draft to the Treasurer Berger
 
-For the tenant farmer (colon) Krückeberg, No. 10 in Berenbusch, a
-capital of two hundred Reichsthaler in regular currency
-from the Treasury has been graciously approved, and the Bückeburg
-Office has deposited a bond for this in the Treasury files.
-Treasurer Berger is therefore instructed to pay out the above 200
-Rth courant to the Bückeburg Office against receipt, and to enter
-this disbursement in the Treasury accounts under the proper
-heading. #
+To Colon Krückeberg, No. 10 in Berenbusch, a capital sum of two
+hundred Reichsthaler in current money at face value from the
+chamber treasury has been graciously approved, and the Bückeburg
+Amt has, to this effect, submitted a promissory note to the
+chamber files.  Treasurer Berger is therefore instructed to pay
+out the above 200 Rth courant to the Bückeburg Office against
+receipt, and to enter this disbursement in the Treasury accounts
+under the proper heading.#
 Bückeburg, 20 Jan. 1842
 [F.p.]
 Lm     L
