--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -150,12 +150,12 @@ the above rescript*†.
 [margin, small hand] v. d. d. 12. Jan. 1842 — file note repeating the
 date of the attached report.
 
-† *The enclosed promissory note is returned herewith*, so that,
-*after payment of the 200 thalers has been made*, the requisite
-particulars may be *noted beneath it*, the *entry in the mortgage
-register* arranged, and *in the bond* the *necessary note with
-reference to the order* added; *then send the same to the
-chamber*.
+†The transmitted promissory note is returned herewith so that,
+after payment of the 200 thalers has been made, the necessary
+notation can be entered beneath it, the entry in the mortgage
+register can be obtained, and the necessary endorsements recorded
+in the promissory note; thereafter, please send it to the
+Chamber.
 ____
 |===
 
