--- a/modules/689/pages/doc-09.adoc
+++ b/modules/689/pages/doc-09.adoc
@@ -84,9 +84,9 @@ Bückeburg, 8 February 1842
 F. Sander – A. Neuhsel – Höcker
 
 B.
-The attached bond (Obligation) was, by decree (Rescript) of 5 May
-1845, no. 2696, receipted by Chamber Councillor Berger for return
-(Retradition) to Krückeberg.
+By order of 5 May 1845, no. 2696, the enclosed promissory note
+has been acknowledged by receipt and delivered to chamber
+treasurer Berger for return to Krückeberg.
 [signed: Schtt.]
 ____
 |===
